less padding in generic buttons to avoid container overflow on e.g. logut page
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@2801 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/default.css
+++ b/mig/images/default.css
@@ -993,7 +993,7 @@ a:hover.settingsbutton {
 
 .genericbutton {
   margin: 2px;
-  padding: 8px;
+  padding: 4px;
   border: 2px solid grey;
   border-radius: 4px;
   background-repeat: no-repeat;
